made margin and padding 0 on the headers, fixed the random white space but now need the first one below the navbar.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,9 @@ h1 {
 	font-family: 'Exo 2';
 	color: white;
 	font-size: 12;
-	text-shadow: 5px 5px 8px #000000
+	text-shadow: 5px 5px 8px #000000;
+	margin: 0px;
+	padding: 0px;
 }
 
 #nav {
